Add click to delete feature

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -44,9 +44,9 @@ input:focus{
 
 	{% for item in items %}
     <div id="id_item">
-<!--     	<h1><a id="id_highlight" href='/finished/delete_item/{{item.id}}'>{{ item.content }}</a></h1>
- -->        <h1>{{ item }}</h1>
-
+    	<h1><a id="id_highlight" href='/finished/delete_item/{{item.id}}'>{{ item.content }}</a></h1>
+<!--         <h1>{{ item }}</h1>
+ -->
     </div>
     {% endfor %}
 
