--- a/templates/login.html
+++ b/templates/login.html
@@ -29,12 +29,12 @@
             <h5>Please check your username and password</h5>
         </div>
         {% endif %}
-        <input class="form-control" id="id_username" type="text" name="username" maxlength="30" placeholder="Username" required autofocus><br>
+        <input class="form-control" id="id_yo_name" type="text" name="id_yo_name" maxlength="30" placeholder="Yo Name" required autofocus><br>
         <input class="form-control" type="password" name="password" id="id_password" placeholder="Password" required><br>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
     </br>
-      <a href="{% url 'around_create_account' %}"{% if path == '/dashboard/content/'%} class="active"{% endif %} style="margin:320px">Create Account</a>
+      <a href="{% url 'create_account' %}"{% if path == '/dashboard/content/'%} class="active"{% endif %} style="margin:320px">Create Account</a>
 
     </div>
   </body>
