--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -59,8 +59,7 @@ input:focus{
     </form>
 </div>
 
-    <div id="yo-button"></div>
-<!-- Enter Yo username -->
+<a href="/logout">Logout</a>
 
 {% endblock content %}
 
