--- a/templates/assets/css/d.css
+++ b/templates/assets/css/d.css
@@ -5,6 +5,8 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
+  margin-right: auto;
+  margin-left: auto
 }
 
 
@@ -18,45 +20,9 @@ body {
 }
 
 
-/*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 1000;
-    display: block;
-    padding: 70px 20px 20px;
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-  }
-}
-
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-left: -20px;
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-}
-.nav-sidebar > li > a {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.nav-sidebar > .active > a {
-  color: #fff;
-  background-color: #428bca;
-}
-
 .navbar{
   color:blue;
+  background-color: white;
 }
 
 /*
@@ -64,36 +30,69 @@ body {
  */
 
 .main {
-  padding: 20px;
+
+  margin-right: auto;
+  margin-left: auto
 }
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   .main {
     padding-left: 40px;
     padding-right: 40px;
   }
-}
+}*/
 .main .page-header {
   margin-top: 0;
 }
 
+* {
+    background-color: transparent;
+}
 
-/*
- * Placeholder dashboard ideas
- */
+#id_content {
 
-.placeholders {
-  margin-bottom: 30px;
-  text-align: center;
+    width: 185px;
+    height: 60px;
+    text-shadow: none;
+    font-size: 30px;
+    padding:0.5em;
+    letter-spacing: 0.05em;
+    margin: 0 0 20px 0;
+    position: relative;
+    display: block;
+    text-transform: none;
+    border-radius: 0;
+    outline:none;
+    -webkit-appearance: none;
+    -webkit-user-select: none;
+    background-color:transparent;
+    border:none;
+    box-shadow: none;
+
 }
-.placeholders h4 {
-  margin-bottom: 0;
+
+input:focus{
+    outline:none;
+    -webkit-appearance: none;
+    -webkit-user-select: none;
+    background:none;
+
 }
-.placeholder {
-  margin-bottom: 20px;
+
+#id_item {
+    font-color:black;
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
 }
-.placeholder img {
-  border-radius: 50%;
+
+#id_highlight {
+    color: purple;
+    margin-right: auto;
+    margin-left: auto;
+
 }
+
+
 
 
 
