--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,11 @@
     {% block javascript %}
 
     <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+
+   <script src="http://yoauth.herokuapp.com/js/jquery.yoauth.js"></script>
+
+   <script> YoAuth.callback = function(user) { console.log(user); }; </script>
     {% endblock javascript %}
 
     {% block extra_head %}{% endblock extra_head %}
@@ -31,33 +36,22 @@
 
   <body class="{% block body_class %}{% endblock body_class %}">
 
-<!--     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Around</a>
+          <a class="navbar-brand center" style="color:purple;font-weight:bold;margin-left:auto;margin-right:auto;position:center;" href="/">FinishedYo</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right navbar-top">
-            <li><a href="{% url 'home' %}"{% if path == '/dashboard/content/'%} class="active"{% endif %}>Home</a></li>
-            <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li><a style="color:purple;" href="{% url 'logout' %}">Logout</a></li>
           </ul>
         </div>
       </div>
-    </div> -->
+    </div>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <div class="row">
-                <div class="col-md-12">
-                </div>
-            </div>
+    <div class="container-fluid center-block">
+      <div class="center-block">
+        <div class="center-block main">
           {%  block content %}{%  endblock content %}
         </div>
       </div>
