--- a/templates/login.html
+++ b/templates/login.html
@@ -1,50 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
+{% extends "base.html" %}
 
-    <title>Login</title>
+{% block content %}
+<style>
 
-   <script src="http://code.jquery.com/jquery-latest.js"></script>
+#id_button {
+  margin-right: auto;
+  margin-right: auto;
+  background-color: purple;
+  width: 50%;
+  height: 70px;
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
 
-   <script src="http://yoauth.herokuapp.com/js/jquery.yoauth.js"></script>
+}
+</style>
+    <div style="padding-top:50px" class="container">
 
-   <script> YoAuth.callback = function(user) { console.log(user); }; </script>
-
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/login.css" type="text/css">
-
-  </head>
-
-  <body>
-
-    <div class="container">
-
-        <a href="#" rel="yoauth" data-redirect-to="http://finishedyo.herokuapp.com/handle_yoauth/">Login with YoAuth</a>
-
-
-<!--       <form class="form-signin" role="form" action="{% url 'login' %}" method="POST">
-          <input type="hidden" name="next" value="{{ next }}" />
-          {% csrf_token %}
-
-        <h2 class="form-signin-heading">Login</h2>
-        {% if form.errors %}
-        <div class="alert alert-danger">
-            <h5>Please check your username and password</h5>
-        </div>
-        {% endif %}
-        <input class="form-control" id="id_yo_name" type="text" name="id_yo_name" maxlength="30" placeholder="Yo Name" required autofocus><br>
-        <input class="form-control" type="password" name="password" id="id_password" placeholder="Password" required><br>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
-    </br>
-      <a href="{% url 'create_account' %}"{% if path == '/dashboard/content/'%} class="active"{% endif %} style="margin:320px">Create Account</a> -->
+        <button id = "id_button" class = 'btn center-block' href="#" rel="yoauth" data-redirect-to="http://finishedyo.herokuapp.com/handle_yoauth/">Login with YoAuth</button>
 
     </div>
   </body>
 </html>
+
+{% endblock content %}
