--- a/templates/assets/css/d.css
+++ b/templates/assets/css/d.css
@@ -43,12 +43,12 @@ body {
 .main .page-header {
   margin-top: 0;
 }
-
+/*
 * {
     background-color: transparent;
 }
-
-#id_content {
+*/
+/*#id_content {
 
     width: 185px;
     height: 60px;
@@ -90,7 +90,7 @@ input:focus{
     margin-right: auto;
     margin-left: auto;
 
-}
+}*/
 
 
 
