--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -80,7 +80,7 @@ $(document).ready(function(){
         e.preventDefault();
         $(this).css('color','red')
     });
-    $("a").click(function(){
+    $("a").dblclick(function(){
         $(this).unbind('click')
     });
 });
