--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -46,13 +46,11 @@ li {
 }
 .page {
     padding-top: 35px;
-    width: 50%;
-    margin-right: auto;
-    margin-left: auto;
+
 }
 </style>
 
-<div class="page">
+<div class="page center-block">
 
     <form class="form-inline" method="post" action="{% url 'finished_add_item' %}" role="form">
     <ul style="list-style:none" id="id_item" class="center-block">
