--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -35,6 +35,7 @@ input:focus{
 #id_highlight {
     font-size: 40px;
     font-weight: bold;
+    text-align: center;
 }
 
 a {
@@ -46,7 +47,7 @@ li {
 }
 .page {
     padding-top: 35px;
-    width: 45%;
+    width: 8em;
     margin-right: auto;
     margin-left: auto;
 }
