--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -35,7 +35,6 @@ input:focus{
 #id_highlight {
     font-size: 40px;
     font-weight: bold;
-    text-align: center;
 }
 
 a {
@@ -47,7 +46,7 @@ li {
 }
 .page {
     padding-top: 35px;
-    width: 7em;
+    width: 40%;
     margin-right: auto;
     margin-left: auto;
 }
