--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -55,56 +55,11 @@ li {
 </style>
 
 <div class="page center-block">
-
-    <form class="form-inline" method="post" action="{% url 'finished_add_item' %}" role="form">
-    <table style="list-style:none" id="id_item" class="center-block">
-       {% for item in items %}
-	   <tr>
-            <td id="id_highlight"><a href='/finished/delete_item/{{item.id}}'>{{ item.content }}</td>
-            <td><h3><time>00:00:00</time></h3></a></td>
-        </tr>
-        {% endfor %}
-        <tr>
-            <td><input id="id_content" type="text" name="content" maxlength="500" placeholder = "Add Item" autofocus ></input></td>
-        </tr>
-    </table>
-
-        {% csrf_token %}
-    </form>
+    <a href="{% url 'fish_add_handle' %}">Add Twitter Handle</a>
 </div>
 
 {% endblock content %}
 
-{% block extra_javascript %}
 
-
-var h3 = document.getElementsByTagName('h3')[0],
-    start = document.getElementById('start'),
-    stop = document.getElementById('stop'),
-    clear = document.getElementById('clear'),
-    seconds = 0, minutes = 0, hours = 0,
-    t;
-
-function add() {
-    seconds++;
-    if (seconds >= 60) {
-        seconds = 0;
-        minutes++;
-        if (minutes >= 60) {
-            minutes = 0;
-            hours++;
-        }
-    }
-    
-    h3.textContent = (hours ? (hours > 9 ? hours : "0" + hours) : "00") + ":" + (minutes ? (minutes > 9 ? minutes : "0" + minutes) : "00") + ":" + (seconds > 9 ? seconds : "0" + seconds);
-
-    timer();
-}
-function timer() {
-    t = setTimeout(add, 1000);
-}
-timer();
-
-{% endblock %}
 
 
