--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
     <div class="navbar navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand center" style="color:purple;font-weight:bold;margin-left:auto;margin-right:auto;position:center;" href="/">FinishedYo</a>
+          <a class="navbar-brand center" style="color:purple;font-weight:bold;margin-left:auto;margin-right:auto;position:center;" href="/">TwitterFish</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right navbar-top">
