--- a/templates/fish/new_tweet.html
+++ b/templates/fish/new_tweet.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<form method="post" action="{% url 'fish_add_handle' %}">
+<form method="post" action="{% url 'fish_new_tweet' %}">
 {% csrf_token %}
 <div id="qa-detail-categories">
-    
+
 {% for field in form %}
     <p>
         {{ field.errors }}
