--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,8 @@
 
 {% block content %}
 <div class="pure-g-r">
-    <div class="pure-u-1" style="text-align: center; font-size: 150%; margin-top: 2em;">
-        <a class="pure-button pure-button-primary" href="{% url 'social:begin' "twitter" %}">Login with Twitter</a>
+    <div class="pure-u-1" style="padding-top:45px;text-align: center; font-size: 150%; margin-top: 2em;">
+        <a href="{% url 'social:begin' "twitter" %}"><button class="btn btn-lg btn-twitter"><i class="fa fa-twitter"></i> Login with Twitter</button></a>
     </div>
 </div>
 {% endblock content %}
