--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
 
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/d.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/social-buttons.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
     {% block extra_styles %}{% endblock extra_styles %}
     {% endblock styles %}
@@ -25,10 +28,8 @@
 
     <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-   <script src="http://yoauth.herokuapp.com/js/jquery.yoauth.js"></script>
-
-   <script> YoAuth.callback = function(user) { console.log(user); }; </script>
     {% endblock javascript %}
 
     {% block extra_head %}{% endblock extra_head %}
@@ -39,11 +40,11 @@
     <div class="navbar navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand center" style="color:purple;font-weight:bold;margin-left:auto;margin-right:auto;position:center;" href="/">TwitterFish</a>
+          <a class="navbar-brand center" style="color:#0271bf;font-weight:bold;margin-left:auto;margin-right:auto;position:center;" href="/">TwitterFish</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right navbar-top">
-            <li><a style="color:purple;" href="{% url 'logout' %}">Logout</a></li>
+            <li><a style="color:#0271bf;" href="{% url 'logout' %}">Logout</a></li>
           </ul>
         </div>
       </div>
@@ -57,16 +58,6 @@
       </div>
     </div>
 
-    <script type="text/javascript">
-  var _yoData = {
-    "username": "FINISHEDYO",
-    "trigger": "When they finish all of their tasks"
-  };
-  var s = document.createElement("script");
-  s.type = "text/javascript";
-  s.src = "//yoapp.s3.amazonaws.com/js/yo-button.js";
-  (document.head || document.getElementsByTagName("head")[0]).appendChild(s);
-</script>
     <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
     <script type="text/javascript">
     {% block extra_javascript %}{% endblock extra_javascript %}
