--- a/templates/fish/new_tweet.html
+++ b/templates/fish/new_tweet.html
@@ -4,7 +4,7 @@
 
 <form method="post" action="{% url 'fish_new_tweet' %}">
 {% csrf_token %}
-<div id="qa-detail-categories">
+<div class = "form-group">
 
 {% for field in form %}
     <p>
@@ -13,7 +13,6 @@
         {{ field }}
     </p>
 {% endfor %}
-
 
 </div>
 
