--- a/templates/fish/new_tweet.html
+++ b/templates/fish/new_tweet.html
@@ -16,7 +16,7 @@
 
 </div>
 
-<input type="submit" name="saveReviewChanges" value="Save Review" />
+<input class="btn btn-primary btn-submit" type="submit" name="saveReviewChanges" value="Submit" />
 
 </form>
 
