--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,12 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Login{% endblock title %}
-
-{% block body_class %}login{% endblock body_class %}
+{% block title %}Translate{% endblock title %}
 
 {% block content %}
 <div class="pure-g-r">
     <div class="pure-u-1" style="padding-top:45px;text-align: center; font-size: 150%; margin-top: 2em;">
-        <a href="{% url 'fish_new_tweet' %}"><button class="btn btn-lg btn-twitter"><i class="fa fa-twitter"></i> Translate and Tweet</button></a>
+        <a href="{% url 'fish_new_tweet' %}"><button class="btn btn-lg btn-twitter"><i class="fa fa-twitter"></i> Translate a Tweet</button></a>
     </div>
 </div>
 {% endblock content %}
