--- a/templates/fish/new_tweet.html
+++ b/templates/fish/new_tweet.html
@@ -2,23 +2,48 @@
 
 {% block content %}
 
-<form method="post" action="{% url 'fish_new_tweet' %}">
-{% csrf_token %}
-<div class = "form-group">
 
-{% for field in form %}
-    <p>
-        {{ field.errors }}
-        {{ field.label_tag }}
-        {{ field }}
-    </p>
-{% endfor %}
-
+{% if success %}
+<div class="pure-g-r">
+    <div class="pure-u-1" style="padding-top:35px;text-align: center; margin-top: 2em;">
+        <h1 style="color:#0084b4;">Success!</h1><br>
+        <p style="color:#0084b4;font-size:18px;"> You tweeted "<strong>{{ tweet_info.raw_tweet }}</strong>" in <strong>{{ tweet_info.target_lang }}</strong></p><br>
+        <a href="{% url 'fish_new_tweet' %}"><button class="btn btn-lg btn-twitter"><i class="fa fa-twitter"></i> Tweet Again</button></a>
+    </div>
 </div>
 
-<input class="btn btn-primary btn-submit" type="submit" name="saveReviewChanges" value="Submit" />
+{% else %}
 
-</form>
+<div style="padding-top:40px;margin-left:auto;margin-right:auto;width:80%;">
+    <form method="post" class="form-horizontal" action="{% url 'fish_new_tweet' %}">
 
+        <div class="form-group">
+            <label for="id_tweet" class="col-sm-2 control-label">Tweet</label>
+                <div class='col-sm-10'>
+                    <textarea class="form-control" rows="3" placeholder="140 characters" id="id_tweet" type="tweet" name="tweet" maxlength="140"></textarea>
+                </div>
+        </div>
+
+        <div class="form-group">
+            <label for="id_lang" class="col-sm-2 control-label">Select Language</label>
+            <div class="col-sm-10">
+                <select class="form-control" id="id_lang" name="target_language">
+                    {% for language in languages %}
+                    <option value="{{language.0}}">{{language.1}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+        </div></br>
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-block btn-twitter" type="submit" name="saveReviewChanges" value="Submit"><i class="fa fa-twitter"></i> Tweet</button>
+        </div>
+    </div>
+    {% csrf_token %}
+    </form>
+<div>
+
+{% endif %}
 
 {% endblock %}
